--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4081,11 +4081,31 @@
 	background-color: rgb(223, 224, 210); /* For demonstration */
 }
 
+#intro_container {
+	z-index: 2;
+	width: 100%;
+	height: 60%;
+	background-image: url("../../images/bg_intro1.png");
+	background-size: cover;
+	background-position: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#start_container {
+	width: 100%; 
+	height: 10%;
+	background-color: #deed5a;
+	position: absolute;
+	top: 60%;
+	left: 0;
+}
+
 #room_container {
 	z-index: 2;
 	width: 100%;
 	height: 60%;
-	background-image: url("../../images/room1.png");
+	background-image: url("../../images/bg_intro1.png");
 	background-size: cover;
 	background-position: center;
 	position: absolute;
