--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4089,13 +4089,25 @@
 	top: 0;
 	left: 0;
 }
-#start_container {
-	width: 100%; 
-	height: 10%;
-	background-color: #deed5a;
+#dark {
+	z-index: 3;
+	width: 100%;
+	height: 60%;
 	position: absolute;
-	top: 60%;
+	opacity: 40%;
+	top: 0;
 	left: 0;
+}
+
+#start_bt {
+	display: block;
+	z-index: 4;
+	width: 60%; 
+	height: 8%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 53%;
+	left: 50%;
 }
 
 #room_container {
