--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4109,6 +4109,17 @@
 	top: 53%;
 	left: 50%;
 }
+#warning_container {
+	z-index: 2;
+	width: 100%;
+	height: 40%;
+	background-image: url("../../images/warning.png");
+	background-size: cover;
+	background-position: center;
+	position: absolute;
+	top: 60%;
+	left: 0;
+}
 
 #room_container {
 	z-index: 2;
