--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4075,9 +4075,10 @@
 	width: 100%;
 	height: 30%;
 	position: absolute;
+	/*
 	border: 5px solid white;
 	max-width: 100%;
-	max-height: 100%;
+	max-height: 100%;*/
 	background-color: rgb(223, 224, 210); /* For demonstration */
 }
 
@@ -4133,7 +4134,9 @@
 #item_container {
 	width: 100%; 
 	height: 10%;
-	background-color: #deed5a;
+	background-image: url("../../images/item.png");
+	background-size: cover;
+	background-position: center;
 	position: absolute;
 	top: 60%;
 	left: 0;
