--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4099,7 +4099,16 @@
 	top: 0;
 	left: 0;
 }
-
+#dark2 {
+	display: none;
+	z-index: 1000;
+	width: 100%;
+	height: 60%;
+	position: absolute;
+	opacity: 40%;
+	top: 0;
+	left: 0;
+}
 #start_bt {
 	display: block;
 	z-index: 4;
@@ -4143,29 +4152,35 @@
 	position: absolute;
 	top: 60%;
 	left: 0;
+	padding-top: 2%;
 }
 #item_container #item_1 {
 	grid-area:1/2/2/3;
 	height: 90%;
 	width:100%;
+	border-radius: 25%;
+
 	/*background-color: rgb(248, 144, 84);*/
 }
 #item_container #item_2 {
 	grid-area:1/3/2/4;
 	height: 90%;
 	width:100%;
+	border-radius: 25%;
 	/*background-color: rgb(248, 144, 84);*/
 }
 #item_container #item_3 {
 	grid-area:1/4/2/5;
 	height: 90%;
 	width:100%;
+	border-radius: 25%;
 	/*background-color: rgb(248, 144, 84);*/
 }
 #item_container #item_4 {
 	grid-area:1/5/2/6;
 	height: 90%;
 	width:100%;
+	border-radius: 25%;
 	/*background-color: rgb(248, 144, 84);*/
 }
 
@@ -4184,21 +4199,60 @@
 	display: none;
 	z-index: 4;
 	width: 22%; 
-	height: 11%;
+	height: 10%;
 	position: absolute;
 	transform: translate(-50%, -50%);
-	top: 20%;
+	top: 21%;
 	left: 77%;
 }
-#memo_bg {
+#memo_bg_red {
 	display: none;
 	z-index: 4;
 	width: 22%; 
-	height: 11%;
+	height: 10%;
 	position: absolute;
 	transform: translate(-50%, -50%);
 	top: 20%;
 	left: 77%;
 }
-
+#towel_min {
+	display: none;
+	z-index: 4;
+	width: 26.68%; 
+	height: 12.4%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 27.41%;
+	left: 43.7%;
+}
+#switch_Off {
+	display: none;
+	z-index: 4;
+	width: 7.6%; 
+	height: 8.4%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 36.7%;
+	left: 93.1%;
+}
+#memo_red {
+	display: none;
+	z-index: 1001;
+	width: 60%; 
+	height: 33%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 50%;
+}
+#memo_blue {
+	display: none;
+	z-index: 1001;
+	width: 60%; 
+	height: 33%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 50%;
+}
 
