--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4215,6 +4215,36 @@
 	top: 20%;
 	left: 77%;
 }
+#memo_bg_blue {
+	display: none;
+	z-index: 4;
+	width: 18%; 
+	height: 7%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 35%;
+	left: 64%;
+}
+#key {
+	display: none;
+	z-index: 1003;
+	width: 30%; 
+	height: 14%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 20%;
+}
+#glass {
+	display: none;
+	z-index: 1003;
+	width: 30%; 
+	height: 14%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 20%;
+}
 #towel_min {
 	display: none;
 	z-index: 4;
@@ -4237,7 +4267,7 @@
 }
 #memo_red {
 	display: none;
-	z-index: 1001;
+	z-index: 1002;
 	width: 60%; 
 	height: 33%;
 	position: absolute;
@@ -4247,7 +4277,7 @@
 }
 #memo_blue {
 	display: none;
-	z-index: 1001;
+	z-index: 1002;
 	width: 60%; 
 	height: 33%;
 	position: absolute;
@@ -4255,4 +4285,86 @@
 	top: 30%;
 	left: 50%;
 }
+#tile {
+	display: none;
+	z-index: 4;
+	width: 15%; 
+	height: 7%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 39.5%;
+	left: 54.5%;
+}
+#light {
+	display: none;
+	z-index: 999;
+	width: 15%; 
+	height: 7%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 39.5%;
+	left: 54.5%;
+}
+#safe {
+	display: none;
+	z-index: 1001;
+	width: 85%; 
+	height: 40%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 50%;
+	touch-action: none;
+}
+#safe_number {
+	display: none;
+	z-index: 1002;
+	width: 20%; 
+	height: 8%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 32.8%;
+	left: 33.3%;
+	color: #000;
+	font-size: 5vw;
+	font-weight: bold;
+	text-align: center;
+	touch-action: none;
+}
 
+@keyframes loop{
+    0%{
+    	top:7%;
+    	left:45%;
+    }
+    50%{
+    	top:7%;
+    	left:55%;
+    }
+    100%{
+        top:7%;
+        left:45%;    
+    }
+}
+
+#success {
+	display: none;
+	z-index: 1005;
+	width: 50%; 
+	height: 10%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 7%;
+	left: 45%;
+	animation: loop 3s infinite;
+}
+#gotomain {
+	display: block;
+	z-index: 1005;
+	width: 50%; 
+	height: 21%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 52%;
+	left: 50%;
+}
