--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4437,3 +4437,13 @@
 	top: 0;
 	left: 0;
 }
+#hint_icon {
+	display: block;
+	z-index: 5;
+	width: 28%;
+	height: 25%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 76%;
+	left: 83%;
+}
