--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4447,3 +4447,62 @@
 	top: 76%;
 	left: 83%;
 }
+
+/****************************Room2**************************/
+#driver_item {
+	display: none;
+	z-index: 3;
+	width: 30%; 
+	height: 14%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 30%;
+	left: 20%;
+}
+#driver_bg {
+	display: none;
+	z-index: 3;
+	width: 63%; 
+	height: 27%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 37.2%;
+	left: 70%;
+}
+#cover_large {
+	display: none;
+	z-index: 4;
+	width: 100%;
+	height: 60%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#cover_small {
+	z-index: 4;
+	width: 9%; 
+	height: 4.3%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 29.9%;
+	left: 14%;
+}
+#line_cut {
+	display: none;
+	z-index: 3;
+	width: 100%;
+	height: 60%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+#line_cut_small {
+	display: none;
+	z-index: 4;
+	width: 8.5%; 
+	height: 4%;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 29.9%;
+	left: 14%;
+}
