--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5258,6 +5258,7 @@
 	transform: translate(-50%, -50%);
 	top: 30%;
 	left: 50.33%;
+	touch-action: none;
 }
 #app2 {
 	display: none;
@@ -5268,6 +5269,7 @@
 	transform: translate(-50%, -50%);
 	top: 30%;
 	left: 50.33%;
+	touch-action: none;
 }
 #app3 {
 	display: none;
@@ -5278,6 +5280,7 @@
 	transform: translate(-50%, -50%);
 	top: 30%;
 	left: 50.33%;
+	touch-action: none;
 }
 #app4 {
 	display: none;
@@ -5288,6 +5291,7 @@
 	transform: translate(-50%, -50%);
 	top: 30%;
 	left: 50.33%;
+	touch-action: none;
 }
 #app5 {
 	display: none;
@@ -5298,6 +5302,7 @@
 	transform: translate(-50%, -50%);
 	top: 30%;
 	left: 50.33%;
+	touch-action: none;
 }
 #pass3-1 {
 	display: none;
@@ -5348,6 +5353,7 @@
 	transform: translate(-50%, -50%);
 	top: 45%;
 	left: 45%;
+	touch-action: none;
 }
 #wolf {
 	display: none;
@@ -5358,6 +5364,7 @@
 	transform: translate(-50%, -50%);
 	top: 28%;
 	left: 22%;
+	touch-action: none;
 }
 #sheep {
 	display: none;
@@ -5368,6 +5375,7 @@
 	transform: translate(-50%, -50%);
 	top: 35.7%;
 	left: 22%;
+	touch-action: none;
 }
 #cabbage {
 	display: none;
@@ -5378,6 +5386,7 @@
 	transform: translate(-50%, -50%);
 	top: 43%;
 	left: 20%;
+	touch-action: none;
 }
 #check_green {
 	display: none;
